--- a/css/style.css
+++ b/css/style.css
@@ -138,3 +138,22 @@ body {
 #fight-msg {
   font-size: 5rem;
 }
+
+#graphics-credit {
+  width: 100%; text-align:center; color:rgba(0, 0, 0, 0.787);
+}
+
+
+#graphics-credit a:link, #graphics-credit  a:visited {
+  color:rgba(0, 0, 0, 0.787);
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#graphics-credit a:hover {
+  text-decoration: underline;
+}
+
+#graphics-credit a:link:active, a:visited:active {
+  color:rgba(0, 0, 0, 0.787);
+}
