--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,22 @@ body {
 #banner img {
   width: 30%
 }
-  
+
+/*-----------------------------------------------------------*/
+
+.imagedropshadow {
+  padding: 5px;
+  border: solid 1px #EFEFEF;
+}
+a:hover img.imagedropshadow {
+  border: solid 1px #CCC;
+  -moz-box-shadow: 1px 1px 5px #999;
+  -webkit-box-shadow: 1px 1px 5px #999;
+      box-shadow: 1px 1px 5px #999;
+}
+
+/*-----------------------------------------------------------*/
+
 #graphics-credit a:link, #graphics-credit  a:visited {
     color:rgba(0, 0, 0, 0.787);
     text-decoration: none;
