--- a/HappyBee/css/style.css
+++ b/HappyBee/css/style.css
@@ -152,7 +152,7 @@ body {
 }
 
 #graphics-credit {
-  width: 100%; text-align:center; color:rgba(0, 0, 0, 0.787);
+  color:rgba(0, 0, 0, 0.787);
 }
 
 
